# arm_robot_kinematics_cpp

./: CMakeLists.txt  ReadMe.md
include/: ArmRobot.hpp  ArmRobotKinematics.hpp  Frame.hpp  KinematicParameters.hpp  Pose.hpp
src/: ArmRobot.cpp  ArmRobotKinematics.cpp  Frame.cpp  main.cpp
